# blink

./: .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  Makefile  PROJECT.md  README.md  ROADMAP.md  components.json  eslint.config.js  implementation.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
core/: Cargo.toml  build.rs  tauri.conf.json
core/capabilities/: default.json
core/defaults/prompts/: context.md  guidelines.md  identity.md  soul.md  tools.md  user.md
core/icons/: icon.icns
core/src/: lib.rs  main.rs  scope.rs
core/src/agent/: executor.rs  memory.rs  planner.rs
core/src/ai/: codex.rs  codex_server.rs  custom.rs  mod.rs  ollama.rs  provider.rs  router.rs  types.rs
core/src/commands/: ai.rs  attachments.rs  blink_code_bridge.rs  editor.rs  editorconfig.rs  files.rs  git.rs  local_history.rs  lsp.rs  mcp.rs  memory.rs  mod.rs  settings.rs  skills.rs  terminal.rs  threads.rs  tools.rs  updater.rs  vterm.rs  watcher.rs  workspaces.rs
core/src/connectors/: browser.rs  clipboard.rs  filesystem.rs  mod.rs
core/src/db/: init.rs  mod.rs  models.rs  queries.rs  schema.rs
core/src/db/models/: attachments.rs  folders.rs  messages.rs  mod.rs  project_memories.rs  threads.rs
core/src/db/queries/: attachments.rs  folders.rs  messages.rs  mod.rs  project_memories.rs  threads.rs  workspaces.rs
core/src/db/schema/: attachments.rs  folders.rs  mod.rs  (+4 more)
core/src/lsp/: manager.rs  mod.rs  registry.rs  transport.rs
core/src/providers/: api.rs  mod.rs  traits.rs  types.rs
core/src/services/: chat.rs  mod.rs  router.rs  workspaces.rs
core/src/settings/: config.rs  mod.rs  prompts.rs  store.rs
core/src/tools/: executor.rs  mod.rs  registry.rs  tool_executor.rs  tool_registry.rs
(+1134 files in other folders)
