[package]
name = "caret"
version = "0.1.0"
description = "AI control layer for your computer"
authors = ["Voxire"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "caret_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
dirs = "6"
