[package]
name = "codrift"
version = "0.0.16"
description = "AI control layer for your computer"
authors = ["Voxire"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "blink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
async-trait = "0.1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
chrono = "0.4"
regex = "1"
pdf-extract = "0.10"
portable-pty = "0.8"
notify = "7"
notify-debouncer-mini = "0.5"
base64 = "0.22"
glob = "0.3"
